--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    .test {
+      color: red;
+      font-size: 50px;
+    }
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
 <body>
-  <h2 style="color:blue">Hello World</h2>
+  <h2 class="test">Hello World</h2>
+  <span class="test">Internal style</span>
 </body>
 </html>
