Add background image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h2 class="test">Hello World</h2>
-  <span class="test">Internal style</span>
+  <div id="bg">Image</div>
 </body>
 </html>
