--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <nav>
-    Navigation
-  </nav>
+  <div id="padding-test">
+    Test
+  </div>
 </body>
 </html>
