--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="padding-test">
-    Test
-  </div>
+  <div class="padding">Padding</div>
+  <div class="margin">Margin</div>
+  <div class="padding">Padding</div>
+  <div class="margin">Margin</div>
+  <div class="padding">Padding</div>
+  <div class="margin">Margin</div>
+  <div class="padding">Padding</div>
+  <div class="margin">Margin</div>
 </body>
 </html>
