--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="padding">Padding</div>
-  <div class="margin">Margin</div>
-  <div class="padding">Padding</div>
-  <div class="margin">Margin</div>
-  <div class="padding">Padding</div>
-  <div class="margin">Margin</div>
-  <div class="padding">Padding</div>
-  <div class="margin">Margin</div>
+  <div class="center">Center</div>
 </body>
 </html>
